--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_chofer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_chofer.xml
@@ -140,6 +140,7 @@
         android:drawableLeft="@drawable/cell_icon"
         android:drawablePadding="5dp"
         android:inputType="phone"
+        android:maxLength="10"
         android:layout_below="@+id/aMaternoChofer"
         android:layout_alignStart="@+id/aMaternoChofer"
         android:layout_alignEnd="@+id/aMaternoChofer"
@@ -161,17 +162,6 @@
         android:layout_alignEnd="@+id/telefonoChofer" />
 
 
-    <!--TextView
-        android:id="@+id/camposObligatorios"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:text="Asegurese que todos los datos sean correctos"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp"
-        tools:ignore="HardcodedText"
-        android:layout_below="@+id/telefonoChofer"
-        android:layout_centerHorizontal="true" /-->
 
 
     <Button
