--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
@@ -214,9 +214,11 @@
                     android:background="@drawable/border_style"
                     android:ems="10"
                     android:hint="@string/hora"
-                    android:inputType="time"
                     android:paddingLeft="10dp"
-                    android:paddingRight="0dp" />
+                    android:paddingRight="0dp"
+                    android:clickable="true"
+                    android:focusable="false"
+                    />
 
                 <!--SELECCIONAR WIDGET-->
                 <EditText
@@ -228,9 +230,10 @@
                     android:background="@drawable/border_style"
                     android:ems="10"
                     android:hint="@string/fecha"
-                    android:inputType="date"
                     android:paddingLeft="10dp"
-                    android:paddingRight="0dp" />
+                    android:paddingRight="0dp"
+                    android:clickable="true"
+                    android:focusable="false"/>
 
                 <TextView
                     android:id="@+id/textViewDD"
@@ -423,8 +426,4 @@
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
-
-
-
-
 </RelativeLayout>
