--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_menu_registros_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_menu_registros_asistente.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imageView10"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@android:color/background_light"
         android:contentDescription=""
         app:srcCompat="@drawable/chofer"
@@ -95,7 +95,7 @@
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="90dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="19dp"
@@ -103,27 +103,18 @@
         tools:ignore="ContentDescription" />
 
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignStart="@+id/imageView10"
-        android:layout_alignTop="@+id/imageView10"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="9dp"
-        app:srcCompat="@drawable/forma_icon"
-        tools:ignore="ContentDescription" />
-
     <TextView
         android:id="@+id/textViewRC"
         android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView4"
-        android:layout_alignEnd="@+id/imageView10"
-        android:text="@string/selecccione_una_de_las_siguientes_opciones"
+        android:layout_height="95dp"
+        android:layout_alignBottom="@+id/imageView10"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:text="A continuación se presentan las opciones para registrar usuarios y solicitudes. Seleccione una para ir a su respectivo formulario de registro"
         android:textAlignment="viewStart"
         android:textColor="?attr/actionMenuTextColor"
-        android:textSize="17sp"
+        android:textSize="14sp"
         tools:ignore="MissingConstraints,RtlHardcoded"
         tools:layout_editor_absoluteX="134dp"
         tools:layout_editor_absoluteY="16dp" />
