--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_servicios.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_servicios.xml
@@ -38,9 +38,9 @@
         android:layout_alignTop="@+id/imageView10"
         android:layout_marginEnd="14dp"
         android:paddingTop="7dp"
-        android:text="@string/capture_los_siguientes_datos"
+        android:text="Por favor seleccione un servicio del siguiente listado para consultar sus datos"
         android:textColor="?attr/actionMenuTextColor"
-        android:textSize="17sp" />
+        android:textSize="14sp" />
 
     <Spinner
         android:id="@+id/buscarServicios"
