--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
@@ -23,13 +23,14 @@
 
     <include layout="@layout/content_inicio_asistentes" />
 
-    <android.support.design.widget.FloatingActionButton
+
+    <!--android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/chat_icon" />
+        app:srcCompat="@drawable/chat_icon" /-->
 
 </android.support.design.widget.CoordinatorLayout>
