--- a/Transportaciones_CICESE/app/src/main/res/layout/content_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/content_inicio_asistentes.xml
@@ -6,8 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.transporte.cicese.transportaciones_cicese.InicioChoferesActivity"
-        tools:showIn="@layout/app_bar_inicio_choferes">
+        tools:context="com.transporte.cicese.transportaciones_cicese.InicioAsistentesActivity"
+        >
+
+
         <ImageView
             android:id="@+id/imageView10"
             android:layout_width="300dp"
@@ -147,15 +149,19 @@
             android:text="@string/consultas_info"
             android:layout_alignEnd="@+id/textView14" />
 
-        <TextView
-            android:id="@+id/textView24"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mayor_info"
-            android:textSize="10sp"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/textView15"
-            android:layout_centerHorizontal="true" />
+
+    <include layout="@layout/activity_atajos" />
+
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="33dp"
+        android:text="@string/mayor_info"
+        android:textSize="10sp" />
 
         <ImageView
             android:id="@+id/imageView12"
@@ -164,5 +170,6 @@
             android:layout_alignTop="@+id/textView2"
             android:layout_toStartOf="@+id/textView2"
             tools:ignore="ContentDescription,UnusedAttribute" />
+
 
     </RelativeLayout>
