--- a/Transportaciones_CICESE/app/src/main/res/layout/updatesolicitudform.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/updatesolicitudform.xml
@@ -45,19 +45,19 @@
                 android:layout_alignEnd="@+id/imageView10"
                 android:layout_alignTop="@+id/imageView10"
                 android:layout_marginEnd="21dp"
-                android:text="@string/capture_los_siguientes_datos"
+                android:text="@string/desc_p_solicitudup"
                 android:textColor="?attr/actionMenuTextColor"
-                android:textSize="17sp"
+                android:textSize="13sp"
                 android:paddingTop="7dp"/>
 
             <Spinner
                 android:id="@+id/solicitudesSpinner"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/border_style"
-                android:layout_below="@+id/imageView10"
-                android:layout_alignStart="@+id/imageView10" />
+                android:layout_alignStart="@+id/imageView10"
+                android:layout_below="@+id/textView27"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/border_style" />
 
 
             <EditText
@@ -114,6 +114,15 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/actualizar_servicios_de_esta_solicitud"
                 android:enabled="false"/>
+
+            <TextView
+                android:id="@+id/textView27"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView10"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="9dp"
+                android:text="@string/capture_los_siguientes_datos" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -127,14 +136,36 @@
             android:layout_alignStart="@+id/formContainer"
             >
 
+            <ImageView
+                android:id="@+id/ima2"
+                android:layout_width="300dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/textbacks"
+                tools:ignore="ContentDescription,UnknownIdInLayout"
+                android:layout_alignBottom="@+id/imageView4"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+
+                android:layout_width="250dp"
+                android:layout_height="70dp"
+                android:layout_alignTop="@+id/ima2"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="7dp"
+                android:text="Una vez capturada la solicitud, deberá seleccionar un servicio asociado a ésta en el sigueinte listado"
+                android:textColor="?attr/actionMenuTextColor"
+                android:textSize="14sp"
+                android:textAlignment="center"/>
+
             <Spinner
                 android:id="@+id/serviciosSpinner"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/border_style"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignStart="@+id/ima2"
+                android:layout_below="@+id/ima2"
+                android:layout_marginTop="17dp"
+                android:background="@drawable/border_style" />
 
             <RelativeLayout
                 android:id="@+id/servicioForm"
@@ -145,16 +176,38 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="10dp">
 
+                <ImageView
+                    android:id="@+id/ima3"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    app:srcCompat="@drawable/textbacks"
+                    tools:ignore="ContentDescription,UnknownIdInLayout"
+                    android:layout_alignBottom="@+id/imageView4"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:layout_alignTop="@+id/ima3"
+                    android:layout_centerHorizontal="true"
+                    android:paddingTop="7dp"
+                    android:text="A continuación se presentan los datos registrados del servicio seleccionado"
+                    android:textAlignment="center"
+                    android:textColor="?attr/actionMenuTextColor"
+                    android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/textViewDD"
-                    android:layout_marginTop="11dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/ima3"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="11dp"
                     android:text="@string/datos_de_encuentro"
                     android:textColor="@android:color/darker_gray"
-                    android:textSize="18sp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/descripcion_lugar_encuentro"
@@ -420,16 +473,16 @@
 
                     <Button
                         android:id="@+id/actualizarServicioButton"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/tercer_button_style"
-                        android:textAllCaps="false"
-                        android:text="@string/actualizar_servicio"
-                        android:layout_marginStart="32dp"
+                        android:layout_width="300dp"
+                        android:layout_height="50dp"
                         android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true" />
+                        android:layout_centerHorizontal="true"
+                        android:background="@drawable/secondary_button_style"
+                        android:text="@string/actualizar_servicio"
+                        android:textAllCaps="false"
+                        android:textColor="#ffff"/>
 
-                    <Button
+                    <!--Button
                         android:id="@+id/actualizarTodoButton"
                         android:layout_width="140dp"
                         android:layout_height="wrap_content"
@@ -438,7 +491,7 @@
                         android:text="@string/actualizar_todo"
                         android:layout_marginStart="18dp"
                         android:layout_alignParentTop="true"
-                        android:layout_toEndOf="@+id/actualizarServicioButton" />
+                        android:layout_toEndOf="@+id/actualizarServicioButton" /-->
 
 
                 </RelativeLayout>
